@@ -1,2 +1,5 @@
+2012-10-09 rafael
+* Included promise for certificate_autority
+
 2012-07-17 rafael
 * Initial Release
